--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foxten",
+  "name": "dmtoys",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -13,9 +13,9 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-jade": "^1.1.0",
-    "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.1.6",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1"
   }
 }
